src/ui/page/PageHeader.css
#page-header {
    position: sticky;
    top: 2.7rem;
    background-color: white;
    padding-top: .5rem;
    margin-bottom: .5rem;
    z-index: 1010;
    box-shadow: 0 4px 5px 0 rgba(0, 0, 0, .14),
                0 1px 10px 0 rgba(0, 0, 0, .12),
                0 2px 4px -1px rgba(0, 0, 0, .2)
}

#page-header .panel {
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;
    max-width: var(--feed-width);
    padding-right: .25rem;
    margin-left: auto;
    margin-right: auto;
}

#page-header H2 {
    margin-left: .3em;
}

#page-header H2 .avatar-link {
    margin-right: .25em;
}

#page-header H2 .btn {
    margin-bottom: 0;
}

#page-header .btn {
    margin-left: .5rem;
    margin-bottom: .5rem;
}

